# open-cowork

./: .env.example  CLAUDE.md  README.md  README_EN.md  README_zh.md  docker-compose.r2.yml  docker-compose.yml
backend/: pyproject.toml
backend/alembic/versions/: 399bf32a2a75_.py  b1a098ab9d8c_.py
backend/app/core/: database.py
backend/app/models/: __init__.py  agent_message.py  agent_run.py  agent_session.py  slash_command.py  tool_execution.py  usage_log.py
backend/app/repositories/: slash_command_repository.py  usage_log_repository.py
backend/app/schemas/: run.py  slash_command.py  slash_command_config.py
backend/app/services/: callback_service.py  run_service.py  slash_command_config_service.py  slash_command_service.py  usage_service.py
docs/en/: configuration.md
docs/zh/: configuration.md
executor/: pyproject.toml
executor/app/: main.py
executor/app/api/: __init__.py
executor/app/api/v1/: callback.py  task.py
executor/app/core/: engine.py
executor/app/hooks/: callback.py
executor_manager/: pyproject.toml
executor_manager/app/services/: backend_client.py  config_resolver.py  container_pool.py  run_pull_service.py  workspace_manager.py
frontend/: package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx
frontend/components/: user-menu.tsx
frontend/components/ui/: sidebar.tsx  (+5 more)
frontend/hooks/: use-chat-creation.ts  use-chat.ts  use-execution-session.ts  use-projects.ts  use-search-data.ts  use-task-history.ts  use-user-account.ts
frontend/lib/: api-client.ts  api-types.ts
im/: README.md
scripts/: quickstart.sh
(+216 files in other folders)
